# modular_tree

./: .clang-format  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.md  VERSION  __init__.py  blender_manifest.toml  build_mtree.bat  build_mtree.osx  build_mtree.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: setup_addon.py
.github/workflows/: CD.yml
docs/: crown_shape_guide.md  growth_node_reference.md  leaf_generation.md
m_tree/: CMakeLists.txt  install.py  pyproject.toml  test.py
m_tree/python_bindings/: CMakeLists.txt  __init__.py  main.cpp
m_tree/source/: CMakeLists.txt
m_tree/source/leaf/: LeafLODGenerator.cpp  LeafLODGenerator.hpp  LeafPresets.cpp  LeafPresets.hpp  LeafShapeGenerator.cpp  LeafShapeGenerator.hpp  VenationGenerator.cpp  VenationGenerator.hpp
m_tree/source/mesh/: Attribute.hpp  Mesh.cpp  Mesh.hpp  VertexGroup.hpp
m_tree/source/meshers/base_types/: TreeMesher.hpp
m_tree/source/meshers/manifold_mesher/: ManifoldMesher.cpp  ManifoldMesher.hpp  smoothing.cpp  smoothing.hpp
m_tree/source/meshers/splines_mesher/: BasicMesher.cpp  BasicMesher.hpp
m_tree/source/tree/: GrowthInfo.hpp  Node.cpp  Node.hpp  Tree.cpp  Tree.hpp
m_tree/source/tree_functions/: BranchFunction.cpp  BranchFunction.hpp  CrownShape.hpp  GrowthFunction.cpp  GrowthFunction.hpp  PipeRadiusFunction.cpp  PipeRadiusFunction.hpp  TrunkFunction.cpp  TrunkFunction.hpp
m_tree/source/tree_functions/base_types/: Property.hpp  TreeFunction.cpp  TreeFunction.hpp
m_tree/source/utilities/: GeometryUtilities.cpp  GeometryUtilities.hpp  NodeUtilities.cpp  NodeUtilities.hpp  RandomGenerator.hpp
m_tree/tests/: CMakeLists.txt  main.cpp
python_classes/: __init__.py  m_tree_wrapper.py  mesh_utils.py  operators.py
python_classes/nodes/: __init__.py  debounce.py  node_categories.py
python_classes/nodes/base_types/: __init__.py  node.py  node_tree.py  socket.py
python_classes/nodes/export_nodes/: __init__.py  pivot_painter_node.py
python_classes/nodes/properties/: __init__.py  ramp_property.py  random_property.py
python_classes/nodes/sockets/: __init__.py  bool_socket.py  float_socket.py  int_socket.py  property_socket.py  tree_socket.py
python_classes/nodes/tree_function_nodes/: __init__.py  branch_node.py  growth_node.py  leaf_shape_node.py  pipe_radius_node.py  tree_mesher_node.py  trunk_node.py
python_classes/panels/: __init__.py
python_classes/pivot_painter/: UE5_MATERIAL_SETUP.md  __init__.py  core.py  exporter.py
python_classes/pivot_painter/formats/: __init__.py  unity.py  unreal.py
python_classes/presets/: __init__.py  leaf_presets.py  tree_presets.py
python_classes/resources/: node_groups.py  resource_utils.py
python_classes/viewport/: __init__.py  crown_shape_drawer.py  shape_formulas.py
tests/: conftest.py  pytest.ini
tests/unit/: __init__.py  test_crown_shape.py  test_leaf_presets.py  test_leaf_shape_generator.py  test_m_tree_wrapper.py  test_pivot_painter_core.py  test_pivot_painter_edge_cases.py  test_pivot_painter_exporter.py  test_tree_presets.py
