[project]
name = "modular-tree"
version = "5.1.0"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "numpy>=1.24",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["python_classes", "."]
exclude = ["m_tree/dependencies"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"m_tree/python_bindings/__init__.py" = ["F403"]

[tool.ruff.format]
quote-style = "double"

# NOTE: pytest configuration is in tests/pytest.ini to avoid importing
# the root __init__.py (Blender addon entry point that imports bpy).
# Run tests with: cd tests && pytest unit -v
